# resl-coverage

./: .gitignore  README.md
Docs/Vids/: 2_targets_3_trackers_consensus_demo.m4v
resl_coverage/: CMakeLists.txt  generate_sim.py  generate_sim_husky.py  generate_sim_quadrotor.py  package.xml  resl  resl.sh
resl_coverage/launch/: abstract_husky.launch  abstract_husky_target_mission.launch  abstract_quadrotor.launch  abstract_target_mission.launch  abstract_tracker_mission.launch  resl_simulation_liftoff.launch  resl_simulation_spawn.launch
resl_coverage/msg/: MultiStateEstimate.msg  ProbMapData.msg  ShareableMeasInfo.msg  StateEstimate.msg
resl_coverage/scripts/: live_plotting.py  plot_tracking.py  record_tracking.py  user_input_husky.py  user_input_velocity.py
resl_coverage/src/: base_station.py  detector.py  husky_controller.py  husky_target_mission.py  husky_tracker.py  kalman.py  lib_grid_map.py  monitor.py  monitor_fov.py  monitor_prob_map.py  prob_map.py  quadrotor_controller.py  quadrotor_target.py  single_tracker.py  tracker.py
resl_coverage/src/archive/: base_station.py  most_recent_tracker.py  single_tracker.py  tr3d.py  tracker.py
resl_coverage/src/utils/: kalman.py
resl_coverage/srv/: Coordinates.srv  Failure.srv  MeasShare.srv  Neighbors.srv  ProcessNoise.srv  State.srv  Topology.srv  TriggerFail.srv
